fix: invisible dropdown elements taking space in layout

--- a/src/components/Dropdown.css
+++ b/src/components/Dropdown.css
@@ -23,7 +23,7 @@
 }
 
 .options.hide {
-  visibility: hidden;
+  display: none;
 }
 
 .options.show {
